--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   flutter_exif_rotation: ^0.5.1
   exif: ^3.1.2
   carousel_slider: ^4.2.1
+  directory_picker: ^1.0.0
+  supabase_flutter: ^1.5.0
+  uuid: ^3.0.7
+  webview_flutter_android: ^3.4.3
   flutter:
     sdk: flutter
 
