--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,6 @@ dependencies:
   dynamic_color: ^1.4.0
   line_icons: ^2.0.0
   floating_search_bar: ^0.3.0
-  shared_preferences: ^2.0.15
   path_provider: ^2.0.11
   image_picker: ^0.8.6
   image: ^4.0.8
@@ -44,6 +43,8 @@ dependencies:
   uuid: ^3.0.7
   webview_flutter_android: ^3.4.3
   flutter_launcher_icons: ^0.12.0
+  lottie: ^2.3.1
+  flutter_secure_storage: ^8.0.0
   flutter:
     sdk: flutter
 
@@ -81,8 +82,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  #assets:
-  #   - img/
+  assets:
+     - lib/img/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
